tests/ui/numbers-arithmetic/overflowing-rsh-5.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-rsh-5.rs:7:14
   |
LL |     let _n = 1i64 >> [64][0];
   |              ^^^^^^^^^^^^^^^ attempt to shift right by `64_i32`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-rsh-5.rs:4:9
   |
LL | #![deny(arithmetic_overflow)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

